criando endpoints escola

--- a/WebAPIMongoDBExample/Web.config
+++ b/WebAPIMongoDBExample/Web.config
@@ -5,7 +5,8 @@
   -->
 <configuration>
   <appSettings>
-    <add key="StringConexao" value="mongodb://{0}:{1}@{2}:{3}" />
+    <!--<add key="StringConexao" value="mongodb://{0}:{1}@{2}:{3}" />-->
+    <add key="StringConexao" value="mongodb://{0}:{1}" />
     <add key="BDUsuario" value="root" />
     <add key="BDSenha" value="123456" />
     <add key="BDHost" value="localhost" />
