--- a/WebAPIMongoDBExample/WebAPIMongoDBExample.csproj
+++ b/WebAPIMongoDBExample/WebAPIMongoDBExample.csproj
@@ -124,6 +124,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\DisponibilidadeController.cs" />
     <Compile Include="Controllers\ImobilizadoController.cs" />
+    <Compile Include="Controllers\EscolaController.cs" />
     <Compile Include="Controllers\TipoImobilizadoController.cs" />
     <Compile Include="Controllers\UtilizacaoController.cs" />
     <Compile Include="Excecoes\AcaoProibidaException.cs" />
@@ -135,22 +136,29 @@
     <Compile Include="Models\Disponibilidade.cs" />
     <Compile Include="Models\DocumentoBase.cs" />
     <Compile Include="Models\Imobilizado.cs" />
+    <Compile Include="Models\Escola.cs" />
+    <Compile Include="Models\Turma.cs" />
+    <Compile Include="Models\Turno.cs" />
     <Compile Include="Models\TipoImobilizado.cs" />
     <Compile Include="Models\Utilizacao.cs" />
     <Compile Include="Negocio\DisponibilidadeNegocio.cs" />
-    <Compile Include="Negocio\IDisponibilidadeNegocio.cs" />
-    <Compile Include="Negocio\IImobilizadoNegocio.cs" />
+    <Compile Include="Negocio\Interfaces\IDisponibilidadeNegocio.cs" />
+    <Compile Include="Negocio\Interfaces\IImobilizadoNegocio.cs" />
     <Compile Include="Negocio\ImobilizadoNegocio.cs" />
-    <Compile Include="Negocio\ITipoImobilizadoNegocio.cs" />
-    <Compile Include="Negocio\IUtilizacaoNegocio.cs" />
+    <Compile Include="Negocio\Interfaces\IEscolaNegocio.cs" />
+    <Compile Include="Negocio\Interfaces\ITipoImobilizadoNegocio.cs" />
+    <Compile Include="Negocio\Interfaces\IUtilizacaoNegocio.cs" />
+    <Compile Include="Negocio\EscolaNegocio.cs" />
     <Compile Include="Negocio\TipoImobilizadoNegocio.cs" />
     <Compile Include="Negocio\UtilizacaoNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
-    <Compile Include="Repository\IImobilizadoRepository.cs" />
+    <Compile Include="Repository\Interfaces\IImobilizadoRepository.cs" />
     <Compile Include="Repository\ImobilizadoRepository.cs" />
-    <Compile Include="Repository\ITipoImobilizadoRepository.cs" />
-    <Compile Include="Repository\IUtilizacaoRepository.cs" />
+    <Compile Include="Repository\Interfaces\ITipoImobilizadoRepository - Copy.cs" />
+    <Compile Include="Repository\Interfaces\IEscolaRepository.cs" />
+    <Compile Include="Repository\Interfaces\IUtilizacaoRepository.cs" />
+    <Compile Include="Repository\EscolaRepository.cs" />
     <Compile Include="Repository\TipoImobilizadoRepository.cs" />
     <Compile Include="Repository\UtilizacaoRepository.cs" />
   </ItemGroup>
