--- a/WebAPIMongoDBExample/WebAPIMongoDBExample.csproj
+++ b/WebAPIMongoDBExample/WebAPIMongoDBExample.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Negocio\UtilizacaoNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
+    <Compile Include="Repository\TurmaRepository.cs" />
     <Compile Include="Repository\Interfaces\IImobilizadoRepository.cs" />
     <Compile Include="Repository\ImobilizadoRepository.cs" />
     <Compile Include="Repository\Interfaces\ITipoImobilizadoRepository - Copy.cs" />
